<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_thin"
        android:layout_marginVertical="@dimen/margin_thin"
        android:ems="10"
        android:hint="@string/text_username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_thin"
        android:layout_marginVertical="@dimen/margin_thin"
        android:ems="10"
        android:hint="@string/text_password"
        android:inputType="numberPassword" />

    <EditText
        android:id="@+id/editText_dollarRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_thin"
        android:layout_marginVertical="@dimen/margin_thin"
        android:ems="10"
        android:hint="@string/text_dollarRate"
        android:inputType="textPersonName|numberDecimal" />

    <Button
        android:id="@+id/button_submitDollarRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_thin"
        android:layout_marginVertical="@dimen/margin_thin"
        android:onClick="login"
        android:text="@string/button_login" />
</LinearLayout>