<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragment.RegisterUserFragment">

    <EditText
        android:id="@+id/frag_register_editText_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_thin"
        android:layout_marginVertical="@dimen/margin_thin"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/text_username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/frag_register_editText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_thin"
        android:layout_marginVertical="@dimen/margin_thin"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/text_password"
        android:inputType="numberPassword" />

    <EditText
        android:id="@+id/frag_register_editText_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_thin"
        android:layout_marginVertical="@dimen/margin_thin"
        android:ems="10"
        android:hint="@string/text_key"
        android:textColor="@color/black"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/frag_register_button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_thin"
        android:layout_marginVertical="@dimen/margin_thin"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/button_register" />

</LinearLayout>