<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.CalculateItemPriceFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:scrollbars="none">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_thin"
            android:layout_marginVertical="@dimen/margin_thin"
            android:layout_weight="2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_thin"
                android:layout_marginVertical="@dimen/margin_thin"
                android:gravity="fill">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/text_id"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/frag_calc_item_price_textView_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/text_blank"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/text_shape"
                    android:textColor="@color/black" />

                <Spinner
                    android:id="@+id/frag_calc_item_price_spinner_shape"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:theme="@style/ThemeOverlay.AppCompat.Light" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/margin_thin"
                android:layout_marginVertical="@dimen/margin_thin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/text_color"
                    android:textColor="@color/black" />

                <Spinner
                    android:id="@+id/frag_calc_item_price_spinner_color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:theme="@style/ThemeOverlay.AppCompat.Light" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/text_purity"
                    android:textColor="@color/black" />

                <Spinner
                    android:id="@+id/frag_calc_item_price_spinner_purity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:theme="@style/ThemeOverlay.AppCompat.Light" />
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_thin"
                android:layout_marginVertical="@dimen/margin_thin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/text_weight"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/frag_calc_item_price_editText_weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/text_discount"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/frag_calc_item_price_editText_discount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_thin"
                android:layout_marginVertical="@dimen/margin_thin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/text_party"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/frag_calc_item_price_editText_party"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:inputType="text"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_thin"
                android:layout_marginVertical="@dimen/margin_thin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/text_comments"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/frag_calc_item_price_editText_comments"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:inputType="text"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_thin"
                android:layout_marginVertical="@dimen/margin_thin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/text_certificate"
                    android:textColor="@color/black" />

                <Spinner
                    android:id="@+id/frag_calc_item_price_spinner_certificateType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:theme="@style/ThemeOverlay.AppCompat.Light" />

                <EditText
                    android:id="@+id/frag_calc_item_price_editText_certificate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_thin"
                    android:layout_weight="7"
                    android:inputType="text"
                    android:textColor="@color/black" />

                <ImageButton
                    android:id="@+id/frag_calc_item_price_button_viewRap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:src="@android:drawable/ic_menu_view" />
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_thin"
                android:layout_marginVertical="@dimen/margin_thin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/text_rap"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/frag_calc_item_price_textView_rap_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:text="@string/text_blank"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_thin"
                android:layout_marginVertical="@dimen/margin_thin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/text_value"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/frag_calc_item_price_textView_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:text="@string/text_blank"
                    android:textColor="@color/black" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/margin_thin"
                android:layout_marginVertical="@dimen/margin_thin">

                <Button
                    android:id="@+id/frag_calc_item_price_button_calculate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_thin"
                    android:layout_weight="5"
                    android:background="@color/colorPrimary"
                    android:text="@string/text_calculate"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/frag_calc_item_price_button_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_thin"
                    android:layout_weight="5"
                    android:background="@color/colorPrimary"
                    android:text="@string/text_save"
                    android:textColor="@color/white" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>