<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.OptionsActivity">

    <TextView
        android:id="@+id/activity_options_textView_dollarRate"
        android:layout_width="wrap_content"
        android:background="@color/white"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_thick"
        android:layout_marginHorizontal="@dimen/margin_thick"
        android:textAlignment="center"
        android:text="TextView" />

    <Button
        android:id="@+id/activity_options_button_manageRap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_thin"
        android:layout_marginVertical="@dimen/margin_thin"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_thick"
        android:text="@string/text_manage_rap" />

    <Button
        android:id="@+id/activity_options_button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_thin"
        android:background="@color/colorPrimary"
        android:layout_marginVertical="@dimen/margin_thin"
        android:textColor="@color/white"
        android:text="@string/text_calculate" />

    <Button
        android:id="@+id/activity_options_button_manageCalculated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_thin"
        android:background="@color/colorPrimary"
        android:layout_marginVertical="@dimen/margin_thin"
        android:textColor="@color/white"
        android:text="@string/text_manage_calculated" />

</LinearLayout>