<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddEditRapFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_thin"
        android:layout_marginVertical="@dimen/margin_thin"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_thick"
            android:layout_marginVertical="@dimen/margin_thin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:layout_marginHorizontal="@dimen/margin_thin"
                android:layout_marginVertical="@dimen/margin_thin"
                android:textColor="@color/black"
                android:text="@string/text_shape" />

            <Spinner
                android:id="@+id/frag_add_edit_rap_spinner_shape"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_thin"
                android:layout_marginVertical="@dimen/margin_thin"
                android:layout_weight="6"
                android:theme="@style/ThemeOverlay.AppCompat.Light" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_thin"
            android:layout_marginVertical="@dimen/margin_thin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginHorizontal="@dimen/margin_thin"
                android:layout_marginVertical="@dimen/margin_thin"
                android:textColor="@color/black"
                android:text="@string/text_color" />

            <Spinner
                android:id="@+id/frag_add_edit_rap_spinner_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_thin"
                android:layout_marginVertical="@dimen/margin_thin"
                android:layout_weight="3"
                android:theme="@style/ThemeOverlay.AppCompat.Light" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_thin"
                android:layout_marginVertical="@dimen/margin_thin"
                android:textColor="@color/black"
                android:text="@string/text_purity" />

            <Spinner
                android:id="@+id/frag_add_edit_rap_spinner_purity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_thin"
                android:layout_marginVertical="@dimen/margin_thin"
                android:layout_weight="4"
                android:theme="@style/ThemeOverlay.AppCompat.Light" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_thin"
            android:layout_marginVertical="@dimen/margin_thin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginHorizontal="@dimen/margin_thin"
                android:layout_marginVertical="@dimen/margin_thin"
                android:textColor="@color/black"
                android:text="@string/text_from" />

            <Spinner
                android:id="@+id/frag_add_edit_rap_spinner_lowerLimit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_thin"
                android:layout_marginVertical="@dimen/margin_thin"
                android:layout_weight="3"
                android:theme="@style/ThemeOverlay.AppCompat.Light" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginHorizontal="@dimen/margin_thin"
                android:layout_marginVertical="@dimen/margin_thin"
                android:textColor="@color/black"
                android:text="@string/text_to" />

            <Spinner
                android:id="@+id/frag_add_edit_rap_spinner_upperLimit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_thin"
                android:layout_marginVertical="@dimen/margin_thin"
                android:layout_weight="3"
                android:theme="@style/ThemeOverlay.AppCompat.Light" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_thin"
            android:textColor="@color/black"
            android:layout_marginVertical="@dimen/margin_thin">

            <EditText
                android:id="@+id/frag_add_edit_rap_editText_rapValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_thin"
                android:layout_marginVertical="@dimen/margin_thin"
                android:layout_weight="7"
                android:ems="10"
                android:hint="@string/test_rap_rate"
                android:inputType="number" />

            <Button
                android:id="@+id/frag_add_edit_rap_button_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_thin"
                android:layout_marginVertical="@dimen/margin_thin"
                android:layout_weight="5"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:text="@string/text_save" />
        </TableRow>
    </TableLayout>

</LinearLayout>